# contracts

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  contract-config.json  reset_soroban_env.sh
.stellar/contract-ids/: hello_world.json
src/: lib.rs
test_snapshots/test/: test_expired_payment.1.json  test_request_payment.1.json  test_submit_payment.1.json  test_submit_payment_already_paid.1.json  test_submit_payment_expired.1.json  test_submit_payment_invalid_tx.1.json  test_submit_payment_success.1.json  test_verify_jwt_bad_jwt.1.json  test_verify_jwt_not_found.1.json  test_verify_jwt_success.1.json
