[package]
name    = "ethicrawler-contract"
version = "0.1.0"
edition = "2021"

[lib]
# rlib is optional for on-chain deployment but required if you ever run unit tests,
# so you may want both.
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "23.0.0-rc.2.2" }

[dev-dependencies]
soroban-sdk = { version = "23.0.0-rc.2.2", features = ["testutils"] }

[features]
# Enables `cargo test --features testutils`
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level         = "z"
overflow-checks   = true
debug             = 0            # stripped anyway
strip             = "symbols"
debug-assertions  = false
panic             = "abort"
codegen-units     = 1
lto               = true

[profile.release-with-logs]
inherits          = "release"
debug-assertions  = true